	PR c++/28269 	* parser.c (cp_parser_elaborated_type_specifier): 	Return early if an invalid type was detected.

* g++.dg/template/crash54.C: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@115475 138bc75d-0d04-0410-961f-82ee72b054a4